[FIX] html_builder, *: fix website builder UI
*: website, website_sale

This commit:
1) sets more space on border style select
2) sets accordion's "Add New" option to primary
3) fixes the alignment of Product pages options subtitles
4) reverses undo/redo icons in RTL languages

3) Steps to reproduce (3):
- Go to /shop and click on a product
- Edit the page
=> "Product Images" and "Product Details" don't have any left margin,
they are not aligned with the rest of the options.

4) Undo and redo icons should be reversed in RTL languages. Culturally,
like in LTR languages, the "forward" icon should go in the direction of
reading, while the "reward" icon should go in the opposite direction.

task-4879833

--- a/addons/html_builder/static/src/core/building_blocks/builder_row.scss
+++ b/addons/html_builder/static/src/core/building_blocks/builder_row.scss
@@ -24,6 +24,10 @@
     align-items: center;
     color: var(--o-hb-row-color, #{$o-we-fg-dark});
 
+    .hb-container-subtitle {
+        padding: $o-hb-row-spacing 0 $o-hb-row-spacing $o-hb-row-padding-left;
+    }
+
     .hb-row-label {
         min-width: 0;
         flex: 0 0 44%;
